# debian stable cmake version 3.7.2
cmake_minimum_required (VERSION 3.7.2)
set (CMAKE_CXX_STANDARD 17)
project (clang-json-gen)
find_package (Clang REQUIRED)
find_package (LLVM REQUIRED)
message (STATUS "using LLVM & Clang " ${LLVM_VERSION})
configure_file(spdlog.h.in spdlog.h)
include_directories("third_party/spdlog/include")
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
set (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--as-needed")
endif()
include_directories(${CMAKE_CURRENT_BINARY_DIR})
add_library(jsongen SHARED JsonGenerator.cpp JsonGenTypeVisitor.cpp Directive.cpp RecordInfo.cpp)
target_link_libraries (jsongen PRIVATE clangBasic clangAST clangFrontend LLVM)
target_include_directories(jsongen PRIVATE third_party/spdlog/include)
